Con Sidebar usando Flexbox

--- a/PatronesRWD/10-con_sidebar_flexbox/css/styles.css
+++ b/PatronesRWD/10-con_sidebar_flexbox/css/styles.css
@@ -49,3 +49,16 @@ p {
 
 
 /** CODIGO AQUI **/
+@media (min-width: 768px) {
+    .con-sidebar {
+        display: flex;
+        gap: 2rem;
+    }
+    aside {
+        flex: 1; /* Factor crecimiento */
+        /* flex: 0 0 calc(33.3% - 1rem) */
+    }
+    article {
+        flex: 3; /* Factor crecimiento */
+    }
+}
