--- a/PatronesRWD/13-mostly_fluid/css/styles.css
+++ b/PatronesRWD/13-mostly_fluid/css/styles.css
@@ -37,3 +37,21 @@ p {
 }
 
 /** CODIGO AQUI **/
+.contenedor {
+    max-width: 100rem;
+    width: 95%;
+    margin: 0 auto;
+}
+@media (min-width: 768px) {
+    .contenedor {
+        max-width: 80%;
+    }
+}
+@media (min-width: 992px) {
+    .contenedor {
+        max-width: 60%;
+    }
+}
+img {
+    max-width: 100%;
+}
